# Dawn-Boids-3D

./: .gitignore  CMakeLists.txt  README.en.md  README.md  README.ru.md  imgui.ini  utils.cmake
assets/: app_icon.icns
include/: App.hpp  Camera.hpp  CoreData.hpp  Debug.hpp  Interface.hpp  Mesh.hpp  Renderer.hpp  ResourceManager.hpp  WebGPUContext.hpp  WindowContext.hpp
shaders/: boids.wgsl  compute.wgsl  deprecated.wgsl  shader.wgsl  test.wgsl
src/: App.cpp  Camera.cpp  Interface.cpp  Mesh.cpp  Renderer.cpp  ResourceManager.cpp  WebGPUContext.cpp  WindowContext.cpp  main.cpp
